--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <h2>chirpus inc.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsa libero in aliquid provident sint laboriosam cum temporibus, quas blanditiis soluta, asperiores quae magni aliquam ipsam. Quidem excepturi tempore iusto!</p>
             <a class="button"  href="#" target="_blank">Scroll Down</a>
+        <div>
+            <span class="dot1"></span>
+            <span class="dot2"></span>
+            <span class="dot3"></span>
+        </div>    
         </section>
     </main>
     
